Update 2.04 Manage Data Lifecycle.md

--- a/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
+++ b/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
@@ -9,10 +9,10 @@ In the realm of cybersecurity, understanding the roles and responsibilities asso
 **Data Controllers** are the architects of data processing, determining the purpose, conditions, and methods of handling personal data. This role gained significant prominence with the General Data Protection Regulation (GDPR), highlighting the importance of adhering to principles like lawfulness, fairness, transparency, data minimization, accuracy, storage limitations, integrity, and confidentiality. Data controllers engage in data processing agreements with data processors to ensure robust privacy protections for personal data. While often synonymous with data owners, this distinction becomes crucial when organizations outsource data processing responsibilities to third parties, such as cloud service providers or managed service providers. In such scenarios, the data owner may delegate the responsibility of establishing data processing requirements to a third party, but ultimately retains accountability for the data's security.
 
 
-**Data Custodians** are the guardians of data, ensuring its security and integrity within the IT infrastructure.. Their responsibilities are primarily technical, focusing on tasks such as data storage, backup, and maintenance of audit logs. They operate under the guidance of data owners and business requirements, implementing security controls and ensuring auditability of data and its usage. Typically residing within the IT department, data custodians play a critical role in translating data management policies into tangible security measures.
+**Data Custodians** are the guardians of data, ensuring its security and integrity within the IT infrastructure. Their responsibilities are primarily technical, focusing on tasks such as data storage, backup, and maintenance of audit logs. They operate under the guidance of data owners and business requirements, implementing security controls and ensuring auditability of data and its usage. Typically residing within the IT department, data custodians play a critical role in translating data management policies into tangible security measures.
 
 
-**Data Processors** handle data on behalf of the data owner, responsible for tasks like transferring, transmitting, or manipulating data. Their role is crucial in data protection, especially in sectors like healthcare and banking, where data exchange is essential for various operations. Data processors, however, do not share the legal responsibility and accountability of data controllers. They operate under the direction of the data controller, who dictates the purpose and methods of data processing. A prime example is cloud providers, often categorized as data processors due to their role in handling data based on instructions from the data controller.. It's worth noting that individuals within organizations may assume both processor and controller roles depending on the context. For instance, an HR firm acts as a data controller for their employee data but transitions to a data processor role when handling client data for outsourced HR tasks, with the client retaining the data controller status.
+**Data Processors** handle data on behalf of the data owner, responsible for tasks like transferring, transmitting, or manipulating data. Their role is crucial in data protection, especially in sectors like healthcare and banking, where data exchange is essential for various operations. Data processors, however, do not share the legal responsibility and accountability of data controllers. They operate under the direction of the data controller, who dictates the purpose and methods of data processing. A prime example is cloud providers, often categorized as data processors due to their role in handling data based on instructions from the data controller. It's worth noting that individuals within organizations may assume both processor and controller roles depending on the context. For instance, an HR firm acts as a data controller for their employee data but transitions to a data processor role when handling client data for outsourced HR tasks, with the client retaining the data controller status.
 
 
 **Data Users** are the individuals who consume or utilize data for specific purposes. They rely on data processors to ensure data availability and performance, often holding them accountable through service-level agreements (SLAs) and contractual obligations. Their focus is on leveraging data to achieve their objectives, making them the ultimate beneficiaries of secure and reliable data management practices.
@@ -70,31 +70,25 @@ Data controllers determine the purpose and means of processing personal data. Th
 Companies violating GDPR privacy rules face significant fines, up to 4% of their global annual revenue. They can also face reputational damage and legal action from affected individuals.
 </details>
 
-6. Explain the purpose of IT governance methods like COBIT.
-<details>
-  <summary>Show answer</summary>
-IT governance methods like COBIT help align IT activities with business goals, including balancing security requirements with operational needs. They provide a framework for managing IT risks and ensuring data security.
-</details>
-
-7. Differentiate between a user and a subject in the context of data access.
+6. Differentiate between a user and a subject in the context of data access.
 <details>
   <summary>Show answer</summary>
 A user is any individual who accesses data through a computing system to perform tasks. A subject, in a broader sense, includes any entity that accesses a resource, such as programs, processes, or computers.
 </details>
 
-8. What are the key responsibilities of a data processor in safeguarding data?
+7. What are the key responsibilities of a data processor in safeguarding data?
 <details>
   <summary>Show answer</summary>
 Data processors ensure the secure transfer, transmission, and handling of data on behalf of the data owner. They are responsible for adhering to contractual agreements and maintaining data confidentiality, integrity, and availability.
 </details>
 
-9. Why is it important to train data processors on acceptable data handling practices?
+8. Why is it important to train data processors on acceptable data handling practices?
 <details>
   <summary>Show answer</summary>
 Training data processors ensures they understand acceptable data handling practices and comply with relevant policies and regulations. This minimizes risks associated with accidental or intentional data misuse.
 </details>
 
-10. What is the significance of respecting data subjects in the context of data privacy?
+9. What is the significance of respecting data subjects in the context of data privacy?
 <details>
   <summary>Show answer</summary>
 Respecting data subjects means recognizing their right to privacy and ensuring their personal information is handled ethically and responsibly. It is fundamental to building trust and maintaining compliance with data protection laws.
@@ -135,7 +129,7 @@ Data classification, typically conducted during data collection or creation, is 
 
 :link: Review what you have learned in [2.1.1 Data Classification](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN2%3A%20Asset%20Security/2.01%20Identify%20and%20classify%20information%20and%20assets.md#211-data-classification)
 
-:Necktie: The decisions made during data collection will have implications throughout the entire lifecycle. 
+:necktie: The decisions made during data collection will have implications throughout the entire lifecycle. 
 
 By understanding and effectively managing the data lifecycle, Security professionals can contribute significantly to securing their organizations' information assets. This involves implementing appropriate security controls at every stage, adhering to relevant legal and regulatory frameworks, and fostering a culture of data security awareness throughout the organization. 
 
