Update 2.04 Manage Data Lifecycle.md

--- a/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
+++ b/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
@@ -103,11 +103,11 @@ A critical aspect of safeguarding data lies in understanding and managing the da
 The image below recap the Data lifecycle:
 ```mermaid
 flowchart LR
-  A[Create / Collect] --> B[Store]
-  B --> C[Use]
-  C --> D[Share]
-  D --> E[Archive]
-  E --> F[Destroy]
+  A[1. Create / 2. Collect] --> B[Store]
+  B --> C[3. Use]
+  C --> D[4. Share]
+  D --> E[5. Archive]
+  E --> F[6. Destroy]
 
 
 
@@ -141,7 +141,7 @@ Privacy brings many laws and regulations. This legal patchwork necessitates a th
 
 A data privacy policy should answer crucial questions regarding the types of data collected, the purpose of collection, data sharing practices, data ownership, subject rights, data retention periods, and relevant legal and regulatory frameworks.
 
-:necktie: An approach like *keeping it just in case it becomes useful someday* is not acceptable for data management or asset collection.
+:necktie: An approach like "*keeping it just in case it becomes useful someday*" is not acceptable for data management or asset collection.
 
 ### Open Questions ###
 1. Why is it crucial to limit data collection?
@@ -222,6 +222,8 @@ In addition to data localization, data sovereignty laws further complicate the l
 :brain: The Data controller is in any case accountable for PII, he/she can delegate responsibility for Data processing.
 
 When properly leveraged, cloud services can restrict specific data classifications to a particular region or country, ensuring adherence to data localization rules. Conversely, if data location is not carefully considered during cloud solution architecture, sensitive data might end up stored in unintended locations, potentially leading to legal repercussions and financial penalties for data owners.
+
+:brain: Data location is simply the geographic place where data is stored, which can be local (on your device), or remote (in a cloud server). Data localization, however, is a legal or governmental requirement that mandates specific types of data, often personal data, must be collected, processed, and stored within a country's borders, restricting its cross-border transfer
 
 Beyond legal and regulatory compliance, data location significantly impacts disaster recovery and business continuity. Organizations often maintain backups of their critical data at different locations to mitigate risks associated with natural disasters, cyberattacks, or other disruptive events. The geographical distance between the primary data storage and the backup location is a crucial consideration. For example, storing a backup copy in the same building as the primary data center would defeat the purpose of having a backup if a fire or other localized disaster were to occur. Ideally, backup data should be located far enough from the primary site to minimize the likelihood of both locations being affected by the same event. This concept extends to cloud storage, where organizations need to verify the physical location of their cloud backups to ensure they reside in a geographically separate area.
 
