Update 2.04 Manage Data Lifecycle.md

--- a/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
+++ b/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
@@ -329,9 +329,10 @@ Protecting sensitive data within an organization requires strategic segregation 
 Organizations must continuously review and update their data policies to ensure they remain relevant and effective. This involves not only staying abreast of industry best practices and emerging threats but also regularly assessing how well personnel adhere to established policies. Think of it as ongoing maintenance for your security infrastructure - regular inspections, adjustments, and repairs are necessary to keep everything running smoothly and protect your valuable data assets.
 
 :bulb: Practical ways for taking care of your data are:
-Data Loss Prevention (DLP) solutions: These tools can help detect and prevent sensitive data from leaving your organization's control, whether intentionally or accidentally.
-User training and awareness programs: Educating employees about data security policies, best practices, and common threats is crucial to fostering a security-conscious culture.
-Regular security audits and penetration testing: These assessments can help identify vulnerabilities in your systems and processes, allowing you to proactively address them before they can be exploited.
+- Data Loss Prevention (DLP) solutions: These tools can help detect and prevent sensitive data from leaving your organization's control, whether intentionally or accidentally.
+- User training and awareness programs: Educating employees about data security policies, best practices, and common threats is crucial to fostering a security-conscious culture.
+- Regular security audits and penetration testing: These assessments can help identify vulnerabilities in your systems and processes, allowing you to proactively address them before they can be exploited.
+
 The list above is not exhaustive and includes only a few examples.
 
 ### Open Questions ###
