Update 2.04 Manage Data Lifecycle.md

--- a/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
+++ b/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
@@ -443,7 +443,7 @@ To ensure the accessibility of retained data, several factors should be consider
 :bulb: Windows indexing is a process that creates an index of files and their contents to improve search speed and efficiency. It scans the files on the computer, storing metadata (like file names, types, and locations) and, in some cases, the actual content of documents, so they can be quickly retrieved. This index is updated periodically, ensuring that search queries return fast, relevant results without having to scan the entire file system each time.
 
 E-discovery, the process of producing electronically stored information (ESI) relevant to a legal proceeding, can be streamlined with robust data retention policies and procedures. 
-The Electronic Discovery Reference Model (EDRM) outlines eight steps involved in e-discovery:
+**The Electronic Discovery Reference Model (EDRM)** outlines eight steps involved in e-discovery:
 1. Identification of relevant data. 
 2. Preservation of data to prevent destruction. 
 3. Collection of data from various storage locations. 
@@ -485,11 +485,12 @@ Regulations such as the Federal Information Security Management Act (FISMA) and 
 
 Organizations should regularly review and update their data retention policies and procedures to ensure they remain effective and compliant with evolving regulations. Data minimization is a key principle in data security, as reducing the amount of data stored minimizes the potential impact of security breaches. 
 
-:necktie: For data, as with assets, an approach based on "keep it just in case it may serve in future" is not acceptable.
+:necktie: For data, as with assets, an approach based on "*keep it just in case it may serve in future*" is not acceptable.
 
 In the following infographic are depicted the possible ways to ensure compliance while safeguarding Personally Identifiable Information (PII) within your company:
 
-<img width="343" height="512" alt="anonymize" src="https://github.com/user-attachments/assets/c943bb65-34f1-40a6-8471-d982fc4f4005" />
+<img width="786" height="1184" alt="Minimization_Anonymization_Pseudonymization" src="https://github.com/user-attachments/assets/6e14866d-8efb-490b-847e-098bf6ab1d1a" />
+
 
 ### Open Questions ###
 
