Update 2.04 Manage Data Lifecycle.md

--- a/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
+++ b/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
@@ -562,16 +562,17 @@ Data remanence is a critical concept in cybersecurity, particularly when dealing
 :necktie: Managers handling data remanence should implement a formalized process that includes asset tracking, secure data sanitization methods, and compliance checks to ensure alignment with organizational policies and regulatory standards.
 
 The persistence of data remanence stems from the way operating systems handle file deletion. When a file is deleted, the operating system typically only removes pointers to the data's location on the storage medium, leaving the actual data intact. This means the data remains physically present on the drive, hidden from normal view but still accessible through specialized tools. This vulnerability is exacerbated by the fact that most data deletion operations don't erase data but simply mark the memory as available for reuse, without overwriting or erasing the original data.
-For instance, in a File Allocation Table (FAT) file system, deleting a file merely replaces the first character of the filename in the directory table with a reserved character, marking it as deleted. However, the data blocks containing the file's content remain untouched, making it susceptible to recovery. This principle extends to modern file systems and databases, where data marked as deleted can still survive in storage.
+For instance, in a File Allocation Table (FAT) file system, deleting a file merely replaces the first character of the filename in the directory table with a reserved character, marking it as deleted. However, the data blocks containing the file's content remain untouched, making it susceptible to recovery. This principle extends to modern file systems and databases, where **data marked as deleted can still survive in storage**.
 
 The potential consequences of data remanence necessitate robust data destruction methods, especially when dealing with regulated data or information with higher sensitivity classifications.  Regulatory frameworks such as the Gramm-Leach-Bliley Act (GLBA), HIPAA, and the Fair Credit Reporting Act in the U.S., and BS EN 15713 in Europe, and many more, mandate specific procedures for secure data destruction to protect sensitive information. These regulations often require certified data destruction processes with documented evidence, such as a certificate of destruction, to ensure compliance.
+
 Several techniques can be employed to mitigate the risk of data remanence:
 1. **Overwriting**: This involves replacing the data on storage media with random or fixed patterns of 1s and 0s multiple times, rendering the original data unrecoverable.
 2. **Degaussing**: Applying a powerful magnetic force to magnetic media, like hard drives, effectively wipes the data and may even render the drive unusable. This method is particularly effective for traditional magnetic storage devices but is not suitable for SSDs.
 3. **Encryption**: Encrypting data and storing the encryption key separately provides a secure way to render data unreadable if the key is securely deleted. This is particularly useful in cloud environments where physical access to storage devices is limited.
 4. **Physical Destruction**: This is considered the most foolproof method and involves physically destroying the storage media through shredding, incineration, or exposure to corrosive chemicals. This method ensures complete data destruction and is often required for highly sensitive data.
 
-The specific data destruction methods required vary depending on the sensitivity of the information, applicable regulations, and the type of storage media being used. 
+:necktie: The specific data destruction methods required vary depending on the sensitivity of the information, applicable regulations, and the type of storage media being used. 
 
 The rise of cloud computing presents unique challenges for data remanence mitigation. In cloud environments, users typically lack physical access to storage hardware, limiting their control over data destruction processes. Cryptographic erasure, achieved by deleting the encryption key for encrypted data stored in the cloud, is often the preferred solution in such scenarios.
 
@@ -583,7 +584,7 @@ In addition to the techniques mentioned above, understanding the concept of **sl
 
 :necktie: Effective data remanence management requires a multi-faceted approach that combines technical measures with procedural controls and adherence to relevant regulations.
 
-:link: [NIST Special Publication 800‑88, "Guidelines for Media Sanitization"](https://csrc.nist.gov/pubs/sp/800/88/r1/final) is the NIST reference about sanitization, unfortunately a bit outdated.
+:link: [NIST Special Publication 800‑88r2, "Guidelines for Media Sanitization"](https://csrc.nist.gov/pubs/sp/800/88/r2/final)) is the NIST reference about sanitization.
 
 ### Open Questions ###
 
