Update 2.04 Manage Data Lifecycle.md

--- a/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
+++ b/DOMAIN2: Asset Security/2.04 Manage Data Lifecycle.md
@@ -654,7 +654,8 @@ Verification is essential to ensure that the chosen data destruction method was 
 
 Data destruction, the final stage of the data lifecycle, is often neglected, but it's a crucial aspect of data security. 
 
-When data is no longer needed, either due to regulations or because it's no longer functionally relevant, it becomes a magnet for hackers, especially since it's often the least protected resource in an environment. Stale data, like an abandoned house, becomes an easy target for those with malicious intent. By properly destroying this unneeded data, you not only reduce your organization's risk exposure, but you also decrease storage and data maintenance costs.
+:bulb: When data is no longer needed, either due to regulations or because it's no longer functionally relevant, it becomes a magnet for hackers, especially since it's often the least protected resource in an environment. Stale data, like an abandoned house, becomes an easy target for those with malicious intent. By properly destroying this unneeded data, you not only reduce your organization's risk exposure, but you also decrease storage and data maintenance costs.
+
 Why is data destruction so important? The answer lies in the potential consequences of improper data disposal. Imagine sensitive information, such as customer financial records or proprietary business secrets, falling into the wrong hands. It could lead to identity theft, financial fraud, espionage, and a host of other serious problems.
 This is where the concept of risk management, a core principle of the CISSP exam and Data Protection, comes into play. By understanding the potential consequences of improper data destruction, you can better assess and mitigate the risks associated with data security.
 
