Update 2.05 Ensure appropriate asset retention.md

--- a/DOMAIN2: Asset Security/2.05 Ensure appropriate asset retention.md
+++ b/DOMAIN2: Asset Security/2.05 Ensure appropriate asset retention.md
@@ -43,9 +43,9 @@ A well-defined retention policy offers numerous advantages:
 3. Preserving institutional memory: Maintaining access to historical data can be invaluable for decision-making, trend analysis, and fostering organizational learning.
 4. Facilitating investigations: In the aftermath of security incidents or legal disputes, retained data can provide crucial evidence for forensic analysis and legal proceedings.
 
-:bulb: ISO 15489-1:2016 is an international standard for records management that provides guidelines on how organizations should create, manage, and maintain records throughout their lifecycle, ensuring they are accessible, authentic, and reliable. It defines the principles and practices of records management, emphasizing the need for a structured approach to organizing, preserving, and disposing of records in both physical and digital formats. The standard aims to help organizations ensure compliance with legal, regulatory, and operational requirements related to records management.
+:bulb: **ISO 15489-1:2016** is an international standard for records management that provides guidelines on how organizations should create, manage, and maintain records throughout their lifecycle, ensuring they are accessible, authentic, and reliable. It defines the principles and practices of records management, emphasizing the need for a structured approach to organizing, preserving, and disposing of records in both physical and digital formats. The standard aims to help organizations ensure compliance with legal, regulatory, and operational requirements related to records management.
 
-:bulb: DoD Instruction 5015.02 is a directive from the U.S. Department of Defense that establishes policies and procedures for records management within the DoD. It provides a framework for the creation, maintenance, and disposition of records, ensuring that all DoD components comply with federal regulations and guidelines for managing records. The instruction ensures that records are properly preserved, accessible, and disposed of in accordance with legal and operational needs.
+:bulb: **DoD Instruction 5015.02** is a directive from the U.S. Department of Defense that establishes policies and procedures for records management within the DoD. It provides a framework for the creation, maintenance, and disposition of records, ensuring that all DoD components comply with federal regulations and guidelines for managing records. The instruction ensures that records are properly preserved, accessible, and disposed of in accordance with legal and operational needs.
 
 While retaining vital data is essential, indiscriminate data retention can be detrimental. The costs associated with storing and protecting massive volumes of data can quickly outweigh their value. Additionally, the longer data is retained, the greater the risk of data breaches and legal exposure.
 Asset retention considerations extend beyond data to include physical assets like hardware. Understanding the nuances of end-of-life (EOL) and end-of-support (EOS) for hardware is very important. EOL signifies the point when a vendor ceases production and support for a product, while EOS marks the termination of software updates and security patches. Continuing to use assets beyond their EOS exposes organizations to significant security vulnerabilities as unpatched systems become easy targets for exploitation.
