Update 2.06 Determine data security controls and compliance requirements.md

--- a/DOMAIN2: Asset Security/2.06 Determine data security controls and compliance requirements.md
+++ b/DOMAIN2: Asset Security/2.06 Determine data security controls and compliance requirements.md
@@ -4,9 +4,9 @@ Data can exist in three states: data at rest, data in motion, and data in use. E
 
 :necktie: For each data state, you must ensure its Confidentiality, Integrity, and Availability.
 
-Data at rest refers to data that is stored on a device or in a storage medium, such as hard drives, solid-state drives, backup tapes, or cloud storage. This data is not actively being used or transmitted, making it a prime target for attackers who gain physical access to the storage device or compromise the system remotely. Encryption is the most effective way to protect data at rest. By encrypting data, even if an attacker gains access to the storage device, they cannot read the data without the encryption key.. Modern operating systems and third-party software offer encryption solutions for individual files, entire volumes, or even whole-disk encryption. 
+**Data at rest** refers to data that is stored on a device or in a storage medium, such as hard drives, solid-state drives, backup tapes, or cloud storage. This data is not actively being used or transmitted, making it a prime target for attackers who gain physical access to the storage device or compromise the system remotely. **Encryption is the most effective way to protect data at rest**. By encrypting data, even if an attacker gains access to the storage device, they cannot read the data without the encryption key.. Modern operating systems and third-party software offer encryption solutions for individual files, entire volumes, or even whole-disk encryption. 
 
-Organizations should have policies requiring encryption of sensitive data, such as personally identifiable information (PII) and protected health information (PHI).. Encrypting all data stored anywhere, an "encrypt everywhere" approach, mitigates the risk of accidental storage of sensitive information in unencrypted volumes.
+Organizations should have policies requiring encryption of sensitive data, such as personally identifiable information (PII) and protected health information (PHI). Encrypting all data stored anywhere, an "encrypt everywhere" approach, mitigates the risk of accidental storage of sensitive information in unencrypted volumes.
 Examples of data at rest protection measures include:
 1. Full disk encryption: Encrypting an entire hard drive volume.
 2. Self-encrypting drives (SEDs): Hard drives or solid-state drives that automatically encrypt and decrypt data without additional software.
@@ -14,25 +14,28 @@ Examples of data at rest protection measures include:
 4. Field-level encryption: Encrypting specific data fields within a file.
 5. Access control: Restricting physical and logical access to storage devices and systems.
 
-Data in motion, also known as data in transit or data in flight, refers to data that is being transmitted over a network. This includes data transmitted over internal networks, the internet, and to the cloud. 
+**Data in motion**, also known as **data in transit** or data in flight, refers to data that is being transmitted over a network. This includes data transmitted over internal networks, the internet, and to the cloud. 
 Data in motion is particularly vulnerable as it travels outside the protected confines of networks and can be intercepted by attackers. Strong encryption, such as Transport Layer Security (TLS) and IPSec, is crucial for protecting data in motion. TLS uses digital certificates to authenticate the server, while IPSec provides secure connections between networks or devices. Data in motion is usually encrypted by:
 1. Transport Layer Security (TLS): A cryptographic protocol that secures communications over the internet, commonly used for HTTPS websites.
 2. IPSec: A suite of protocols that provide secure communication between devices or networks, often used for VPNs.
 3. Virtual Private Networks (VPNs): Create secure connections between remote users and corporate resources or between geographically dispersed networks, providing secure communication over untrusted networks like the internet.
 
-Data in use refers to data that is actively being processed by an application or system and is temporarily stored in volatile memory, such as RAM, CPU caches, or registers. Protecting data in use is challenging because it needs to be decrypted before processing, making it vulnerable to attacks that target the system's memory. While encryption cannot directly protect data in use, strategies like decrypting data at the last moment before processing and encrypting it as soon as it leaves the CPU registers can enhance security. However, this approach is computationally expensive and requires specialized hardware, such as cryptographic co-processors.
+**Data in use** refers to data that is actively being processed by an application or system and is temporarily stored in volatile memory, such as RAM, CPU caches, or registers. Protecting data in use is challenging because it needs to be decrypted before processing, making it vulnerable to attacks that target the system's memory. While encryption cannot directly protect data in use, strategies like decrypting data at the last moment before processing and encrypting it as soon as it leaves the CPU registers can enhance security. However, this approach is computationally expensive and requires specialized hardware, such as cryptographic co-processors.
 Emerging technologies, such as homomorphic encryption, offer promising solutions for protecting data in use. Homomorphic encryption allows computations on encrypted data without decryption, meaning the data remains encrypted throughout the processing. Although not yet practical for widespread use, advancements in homomorphic encryption could revolutionize data security in the future. Homomorphic encryption enables computations on encrypted data without decryption, preserving data confidentiality throughout processing.
-
-| Data State       | Definition                                                                                             | Risks                                                                 | Protection Measures                                                                                             |
-|------------------|--------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------|
-| **At rest**      | Data stored on devices or storage media (e.g., drives, tapes, cloud) not currently moving or being used :contentReference[oaicite:1]{index=1} | Physical theft, unauthorized system access, ransomware                | Full-disk encryption, self-encrypting drives, file/field-level encryption, access control, "encrypt everywhere" |
-| **In motion**    | Data being transmitted over networks (internal, internet, or cloud) :contentReference[oaicite:2]{index=2} | Interception, man-in-the-middle, packet sniffing                     | TLS/HTTPS, IPSec/VPN, secure communication tunnels                                                               |
-| **In use**       | Data loaded into memory (RAM, CPU cache) while being processed :contentReference[oaicite:3]{index=3} | Memory scraping, side-channel attacks                                | Last-moment decryption, secure enclaves (TEE), emerging approaches like homomorphic encryption                 |
-| **Common goal** | Ensure **Confidentiality**, **Integrity**, and **Availability** (CIA triad) for every data state       | —                                                                      | Encryption and robust access control across all states                                                           |
 
 **Side-channel attacks** pose a significant threat to data in use. These attacks exploit information leaked by a cryptosystem, such as power consumption or processing time, to deduce sensitive information, including encryption keys. For example, the Heartbleed vulnerability demonstrated how attackers could exploit memory vulnerabilities to access sensitive data from other processes running on the same system. Similarly, attacks like Meltdown, Spectre, and BranchScope leverage hardware features in modern CPUs to exploit memory access patterns and steal data in use.
 
 :bulb: Audio data can be kept private by using headphones to prevent eavesdropping, while protecting written data often requires physical measures like protective screens or privacy filters.
+
+The following table recaps what we have seen so far:
+
+| Data State       | Definition                                                                                             | Risks                                                                 | Protection Measures                                                                                             |
+|------------------|--------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------|
+| **At rest**      | Data stored on devices or storage media (e.g., drives, tapes, cloud) not currently moving or being used  | Physical theft, unauthorized system access, ransomware                | Full-disk encryption, self-encrypting drives, file/field-level encryption, access control, "encrypt everywhere" |
+| **In motion**    | Data being transmitted over networks (internal, internet, or cloud)  | Interception, man-in-the-middle, packet sniffing                     | TLS/HTTPS, IPSec/VPN, secure communication tunnels                                                               |
+| **In use**       | Data loaded into memory (RAM, CPU cache) while being processed  | Memory scraping, side-channel attacks                                | Last-moment decryption, secure enclaves (TEE), emerging approaches like homomorphic encryption                 |
+| **Common goal** | Ensure **Confidentiality**, **Integrity**, and **Availability** (CIA triad) for every data state       | —                                                                      | Encryption and robust access control across all states                                                           |
+
 
 ### Open Questions ###
 
