Update 2.06 Determine data security controls and compliance requirements.md

--- a/DOMAIN2: Asset Security/2.06 Determine data security controls and compliance requirements.md
+++ b/DOMAIN2: Asset Security/2.06 Determine data security controls and compliance requirements.md
@@ -48,7 +48,11 @@ Data at rest refers to data stored on a device or system and not actively being 
 2. List three methods of data encryption and briefly describe their scope of protection.
 <details>
   <summary>Show answer</summary>
-Full-disk encryption: Encrypts an entire storage drive. * File-level encryption: Encrypts individual files. * Field-level encryption: Encrypts specific data fields within a file.
+Full-disk encryption: Encrypts an entire storage drive. 
+
+File-level encryption: Encrypts individual files. 
+  
+Field-level encryption: Encrypts specific data fields within a file.
 </details>
 
 3. What is the primary purpose of using encryption as a security control?
